# sdk-python

./: .bazelrc  .coverage  .gitignore  .sonarcloud.properties  BUILD.bazel  Makefile  README.md  WORKSPACE  copy.bara.sky  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tool.py
.devcontainer/: Dockerfile  Dockerfile.gitpod  devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  buildkite.yml  codecov.yml
.github/tpl/: README.md
.github/workflows/: publish-gh.yml  sdk-python.yml
.hooks/: pre-commit
appapi/: __init__.py  api_helper.py  appapi_client.py  configuration.py  decorators.py
appapi/controllers/: base_controller.py  brands_controller.py  stores_controller.py  strains_controller.py
appapi/exceptions/: api_exception.py  fault_response_exception.py
appapi/http/: http_call_back.py  http_client.py  http_method_enum.py  http_request.py  http_response.py  requests_client.py
appapi/models/: address.py  brand.py  brand_asset.py  brand_list.py  brand_spec.py  breeder.py  color.py  contact.py  cookies_brand_enum.py  dual_format_graphic.py  error_detail.py  geo.py  (+34 more)
cookiesapi/: __init__.py  __main__.py
doc/: client.md
docs/: CNAME  client.md  index.md
scripts/: build-test-linux.sh  build-test-macos.sh  build-test.sh  build.sh  deps.sh  env.sh  load-artifacts.sh  push-artifacts.sh  report-coverage.sh  report-sonar.sh  test.sh
tests/: http_response_catcher.py  test_helper.py
tools/: Setup.mak  Tools.mak  base.bazel.rc  ci.bazel.rc  dev.bazel.rc  release.bazel.rc  sources.py  workspace.sh
(+46 files in other folders)
